# WP3_T7

./: .gitignore  README.md  pyproject.toml
pipeline/src/: dataset.py
scripts/: check_pulses.py  inference.py  test.py  train.py
src/: __init__.py  dataset.py
src/config/: effat.yaml  labels_check.yaml  passt.yaml  vggish _test.yaml  vggish_inference.yaml  vggish_test.yaml  vggish_train.yaml
src/models/: VggishFeaturesExtractor.py
src/models/effat_repo/helpers/: utils.py
src/models/effat_repo/models/: preprocess.py
src/models/effat_repo/models/dymn/: model.py
src/models/effat_repo/models/mn/: attention_pooling.py  block_types.py  model.py
src/models/passt/: base.py  preprocess.py
src/models/vggish_modules/: vggish_input.py  vggish_slim.py
src/pipeline/: __init__.py  dataset.py  effat_model.py  passt_model.py  utils.py  vggish_model.py
src/pipeline/effat_repo/models/dymn/: dy_block.py  model.py
src/pipeline/effat_repo/models/mn/: model.py
src/tools/: confusion_matrix.py  training_curves.py
