[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["carozzoisabel <isabel.carozzo@onairweb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.1"
numpy = "<2.0.0"
librosa = "^0.10.0.post2"
soundfile = "^0.12.1"
tqdm = "^4.66.4"
scikit-learn = "^1.3.0"
logging = "^0.4.9.6"
resampy = "^0.4.2"
tensorflow = "^2.14.0"
tf-slim = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
